# QUARK-plugin-tsp

./: README.md  pyproject.toml
.github/workflows/: release.yml  replace_names.yml
src/PLUGIN_NAME_FORMATTED/: example_module.py
src/quark_plugin_tsp/: __init__.py  tsp_qubo_mapping_dnx.py
